Adding descriptions, interpretations of results

--- a/src/notebooks/test_cases.ipynb
+++ b/src/notebooks/test_cases.ipynb
@@ -3920,15 +3920,18 @@
     "\n",
     "##### **Uncertainty**\n",
     "\n",
+    "Uncertainty can lead to a large increase in travel time. For example, at peak traffic (without uncertainty) the time between Battery Park and Rockefeller Center was 66.23 minutes. After factoring in uncertainty, the time increased to 116.77 minutes (+76%)! Also, as noted above, road closures due to uncertainty can change the shortest path as well as add travel time.\n",
+    "\n",
     "##### **Interpreting Results**\n",
     "\n",
-    "##### **Assumptions & Limitations**"
+    "##### **Assumptions & Limitations**\n",
+    "Our results are conditioned on the initial selection of nodes. There are of course many different ways to travel to each of the NYC landmarks; a road closure would not actually mean you can't make it to a certain destination. We also assumed that travel time from node A to node B was the same as for node B to node A. In reality this would not be true given NYC's many one-way streets and varying traffic patterns."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c2434e9-2e72-44d1-adde-40bef3211845",
+   "id": "e17dfc60-290d-4e82-991e-36e930bcb229",
    "metadata": {},
    "outputs": [],
    "source": []
