Added implementation descriptions

--- a/src/notebooks/test_cases.ipynb
+++ b/src/notebooks/test_cases.ipynb
@@ -44,9 +44,9 @@
    "id": "866efc08-c498-4fdc-b246-5bc4bd5c113d",
    "metadata": {},
    "source": [
-    "We chose to represent our graph with ........\n",
+    "We chose to represent our graph using Folium, since it allows for an easy representation of the map and also allows for creating connecting edges and show weights easily.\n",
     "\n",
-    "Dijkstra's Algorithm was implemented by ........\n",
+    "Dijkstra's Algorithm was implemented by using an adjacency matrix and a distance matrix. We also used a list to keep track of the visited arrays.\n",
     "\n",
     "Design choices include setting the `folium` map to highlight the shortest path in red, and making the backgroup map of NYC more simplistic/subtle to increase contrast"
    ]
