Finalize test_cases notebook

--- a/src/notebooks/test_cases.ipynb
+++ b/src/notebooks/test_cases.ipynb
@@ -21,14 +21,15 @@
    "id": "a3bc68f3-383f-4235-a75c-6a159b7f709e",
    "metadata": {},
    "source": [
-    "##### **Approach**\n",
+    "#### **Approach**\n",
     "- We selected NYC because it's a group member's former home\n",
-    "- Nodes were defined by selection iconic NYC locations (ex. Times Square, Rockefeller Center, Empire State Building, etc.)\n",
+    "- Nodes were defined by selecting iconic NYC locations (ex. Times Square, Rockefeller Center, Empire State Building, etc.)\n",
     "- The maps in this notebook were built using `folium`\n",
-    "- For both base and rush hour scenarios, we used Google Maps data. The dataset included information on peak travel times, but we opted to use a model instead to show increase congestion. The model applies a multiple between 1 and 3 to each edge.\n",
+    "- For both base and rush hour scenarios, we used Google Maps data. The dataset included information on peak travel times, but we opted to use a model instead to show increase congestion. The model applies a multiple between 1 and 3 to each edge to simulate rush hour.\n",
     "\n",
-    "##### **Assumptions**\n",
-    "- The time from node A to node B is the same as the time from node B to node A"
+    "#### **Assumptions**\n",
+    "- The time from node A to node B is the same as the time from node B to node A\n",
+    "- Any edge weight designed as `inf` means the route is closed"
    ]
   },
   {
@@ -3912,19 +3913,27 @@
    "id": "eaf969e1-6db1-412e-830f-e6ccc15317e0",
    "metadata": {},
    "source": [
-    "##### **Route**\n",
+    "#### **Route**\n",
     "Due to the shape of the graph (layout of selected NYC landmarks), the shortest path from Battery Park to Rockefeller Center is almost always the same despite the scenario <br>\n",
     "- Battery Park / South Ferry $\\rightarrow$ Washington Square Park $\\rightarrow$ Union Square $\\rightarrow$ Flatiron / Madison Sq Park $\\rightarrow$ Empire State Building $\\rightarrow$ Grand Central Terminal $\\rightarrow$ Rockefeller Center <br>\n",
     "\n",
     "However, road closures can cause a deviation in the path. For example, when we added uncertainty to the average traffic scenario, the route between Union Square and Washington Square park was blocked off. As a result, the shortest path diverted to Chelsea Market before continuing as usual.\n",
     "\n",
-    "##### **Uncertainty**\n",
+    "#### **Uncertainty**\n",
     "\n",
     "Uncertainty can lead to a large increase in travel time. For example, at peak traffic (without uncertainty) the time between Battery Park and Rockefeller Center was 66.23 minutes. After factoring in uncertainty, the time increased to 116.77 minutes (+76%)! Also, as noted above, road closures due to uncertainty can change the shortest path as well as add travel time.\n",
     "\n",
-    "##### **Interpreting Results**\n",
+    "#### **Interpreting Results**\n",
+    "Scenario | Uncertainty | Travel Time (min) | Shortest Route | # Stops\n",
+    "|---|---|---|---|---|\n",
+    "Average Traffic | False | 30.53 | Battery Park / South Ferry $\\rightarrow$ Washington Square Park $\\rightarrow$ Union Square $\\rightarrow$ Flatiron / Madison Sq Park $\\rightarrow$ Empire State Building $\\rightarrow$ Bryant Park / NYPL $\\rightarrow$ Rockefeller Center| 7 |\n",
+    "Average Traffic | True | 117.24 | Battery Park / South Ferry $\\rightarrow$ Washington Square Park $\\rightarrow$ Chelsea Market $\\rightarrow$ Union Square $\\rightarrow$ Flatiron / Madison Sq Park $\\rightarrow$ Empire State Building $\\rightarrow$ Bryant Park / NYPL $\\rightarrow$ Rockefeller Center | 8 |\n",
+    "Rush Hour | False | 66.23 | Battery Park / South Ferry $\\rightarrow$ Washington Square Park $\\rightarrow$ Union Square $\\rightarrow$ Flatiron / Madison Sq Park $\\rightarrow$ Empire State Building $\\rightarrow$ Bryant Park / NYPL $\\rightarrow$ Rockefeller Center | 7 |\n",
+    "Rush Hour | True | 116.77 |Battery Park / South Ferry $\\rightarrow$ Washington Square Park $\\rightarrow$ Union Square $\\rightarrow$ Flatiron / Madison Sq Park $\\rightarrow$ Empire State Building $\\rightarrow$ Bryant Park / NYPL $\\rightarrow$ Rockefeller Center | 7 |\n",
     "\n",
-    "##### **Assumptions & Limitations**\n",
+    "Without uncertainty, rush hour travel takes about 2x as long as travel during average traffic conditions. With uncertainty, travel time was approximately equal for average traffic and rush hour scenarios. The uncertainty during average traffic added an extra stop at Chelsea Market due to a road closure betwen Union Square and Washington Square Park.\n",
+    "\n",
+    "#### **Assumptions & Limitations**\n",
     "Our results are conditioned on the initial selection of nodes. There are of course many different ways to travel to each of the NYC landmarks; a road closure would not actually mean you can't make it to a certain destination. We also assumed that travel time from node A to node B was the same as for node B to node A. In reality this would not be true given NYC's many one-way streets and varying traffic patterns."
    ]
   },
